--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test GitHub Pages</title>
+    <title>Page principale</title>
 </head>
 <body>
-    <h1>Youpi ! :)</h1>
+    <h1>Ceci est ma page principale</h1>
 </body>
 </html>
